FIX ALL WHITE SPACE

--- a/style.css
+++ b/style.css
@@ -891,9 +891,10 @@ body3 h1 {
 .promote {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 160px;
-  padding-left: 90px;
-  width: 100%;
+  gap: 120px;
+  padding: 50px 100px;
+  margin-left: 70px;
+  max-width: 100%;
   border-color: black;
 }
 .promote-plan {
@@ -908,7 +909,7 @@ body3 h1 {
   border: 2px solid rgba(233, 232, 232, 0.695);
   padding-bottom: 30px;
   transition: ease 1s;
-  width: 414px;
+  width: 314px;
   height: auto;
 }
 .promote-title {
@@ -1632,7 +1633,9 @@ button:hover {
     padding: 1em;
     border: 0.5em solid #556086;
   }
-
+  body {
+    overflow-x: hidden;
+  }
   body2 #Back {
     width: 90%;
     margin: 0 auto;
@@ -1704,25 +1707,7 @@ button:hover {
     justify-content: space-evenly;
     text-align: left;
   }
-  .input-sub {
-    padding: 10px;
-  }
-  .home-text {
-    display: flex;
-    padding-top: 10px;
-  }
-  .home-text h1 {
-    width: 200px;
-    height: 100px;
-    line-height: 32px;
-  }
-  .main-section {
-    display: flex;
-    padding-top: 10px;
-  }
-  .home-text p {
-    font-size: 10px;
-  }
+
   .first,
   .second,
   .third {
@@ -1769,17 +1754,11 @@ button:hover {
   .nav-bar {
     max-width: 100%;
   }
-  body5 {
-    padding-left: 10px;
-  }
   .promote {
-    margin-right: 20px;
-    width: 340px;
     overflow-x: auto;
   }
   .promote-plan {
-    padding-left: 0;
-    width: 280px;
+    width: 314px;
     height: auto;
     margin-left: 0;
   }
@@ -1809,10 +1788,9 @@ button:hover {
   justify-content: flex-start;
  }
 
- 
 
 }
-@media (max-width:320px){
+@media (max-width:440px){
   .promote{
     transform: translateX(-50px);
   }
